<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/guitar"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/playEButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="12dp"
        android:text="@string/playE"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/guitar_pick" />

    <Button
        android:id="@+id/playAButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="20dp"
        android:text="@string/playA"
        android:textSize="20sp"
                android:textColor="@color/white"
        android:background="@drawable/guitar_pick"  />

    <Button
        android:id="@+id/playDButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="20dp"
        android:text="@string/playD"
        android:textSize="20sp"
                android:textColor="@color/white"
        android:background="@drawable/guitar_pick"  />

    <Button
        android:id="@+id/playGButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="20dp"
        android:text="@string/playG"
        android:textSize="20sp"
                android:textColor="@color/white"
        android:background="@drawable/guitar_pick"  />

    <Button
        android:id="@+id/playBButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="20dp"
        android:text="@string/playB"
        android:textSize="20sp" 
                android:textColor="@color/white"
        android:background="@drawable/guitar_pick" />

    <Button
        android:id="@+id/playESmallButton"
        android:layout_width="41dip"
        android:layout_height="46dip"
        android:layout_marginLeft="20dp"
        android:text="@string/playESmall"
        android:textSize="20sp" 
                android:textColor="@color/white"
        android:background="@drawable/guitar_pick" />
    
    </LinearLayout>
    
   

</LinearLayout>